--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js",
+        "build": "node index.js",
         "start-dev": "nodemon index.js"
     },
     "keywords": [],
@@ -15,6 +16,9 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongodb": "^4.13.0"
+        "mongodb": "^4.13.0",
+        "nodemon": "^2.0.20",
+        "react-icons": "^4.7.1",
+        "vercel": "^28.16.7"
     }
 }
